--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@types/react-transition-group": "^4.4.4",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "reactjs-popup": "^2.0.5"
   }
 }
